Request 730274: Some device parameters should be hex, in ini and Gui
git-svn-id: https://svn.code.sf.net/p/controlremote/code/trunk@104 bfc585dc-5255-483b-a5ca-a9bf5897b33d