@@ -20,6 +20,7 @@ public class DeviceParmFactory
       Integer defaultValue = new Integer( 0 );
       int bits = -1;
       String name = st2.nextToken();
+      int base = 10;
       String[] choices = null;
       Dimension d = null;
       DeviceParameter ref = null;
@@ -35,11 +36,16 @@ public class DeviceParmFactory
             ref = rc[ Integer.parseInt( st3.nextToken())];
           }
           else
-            defaultValue = new Integer( token );
+            defaultValue = Integer.valueOf( token, base );
         }
         else if ( sep.equals( ":" ))
         {
           String str = st2.nextToken();
+          if ( str.charAt( 0 ) == '$' )
+          {
+            base = 16;
+            str = str.substring( 1 );
+          }
           if ( str.indexOf( '|' ) != -1 )
           {
             StringTokenizer st3 = new StringTokenizer( str, "|" );
@@ -52,11 +58,11 @@ public class DeviceParmFactory
           else if ( str.indexOf( '-' ) != -1 )
           {
             StringTokenizer st3 = new StringTokenizer( str, "-" );
-            d = new Dimension( Integer.parseInt( st3.nextToken()),
-                               Integer.parseInt( st3.nextToken()));
+            d = new Dimension( Integer.parseInt( st3.nextToken(), base ),
+                               Integer.parseInt( st3.nextToken(), base ));
 
           }
-          else
+          else if ( str.length() > 0 )
           {
             bits = Integer.parseInt( str );
           }
@@ -66,11 +72,13 @@ public class DeviceParmFactory
       if ( choices != null )
         parm = new ChoiceDeviceParm( name, defaultValue, choices );
       else if ( bits != -1 )
-        parm = new NumberDeviceParm( name, defaultValue, bits );
+      {
+        parm = new NumberDeviceParm( name, defaultValue, bits ).setBase( base );
+      }
       else if ( d != null )
-        parm = new NumberDeviceParm( name, defaultValue, d.width, d.height );
+        parm = new NumberDeviceParm( name, defaultValue, d.width, d.height ).setBase( base );
       else
-        parm = new NumberDeviceParm( name, defaultValue );
+        parm = new NumberDeviceParm( name, defaultValue ).setBase( base );
 
       if ( ref != null )
         parm.setDefaultReference( ref );
