@@ -22,13 +22,31 @@ public class NumberDeviceParm
     super( name, defaultValue );
     this.min = min;
     this.max = max;
-    IntVerifier verifier = new IntVerifier( min, max, true );
+    verifier = new IntVerifier( min, max, true );
     tf = new JTextField();
     String helpText = "Enter a number in the range " + min + ".." + max + ".";
     if ( defaultValue != null )
       helpText += "  The default is " + defaultValue + ".";
     tf.setToolTipText( helpText );
     tf.setInputVerifier( verifier );
+  }
+
+  public NumberDeviceParm setBase( int base )
+  {
+    this.base = base;
+    verifier.setBase( base );
+    String numType = "";
+    if ( base == 16 )
+      numType = " hex ";
+    String helpText = "Enter a " + numType +  
+                      "number in the range " + 
+                      Integer.toString( min, base ) + 
+                      ".." +
+                      Integer.toString( max, base ) + '.';
+    if ( getDefaultValue() != null );
+      helpText += "  The defaultValue is " + Integer.toString((( Integer )getDefaultValue()).intValue(), base ) + '.';
+    tf.setToolTipText( helpText );
+    return this;
   }
 
   public JComponent getComponent()
@@ -41,7 +59,7 @@ public class NumberDeviceParm
     String text = tf.getText();
     if (( text == null ) || ( text.length() == 0 ))
       return null;
-    return new Integer( tf.getText());
+    return Integer.valueOf( tf.getText(), base );
   }
 
   public void setValue( Object value )
@@ -49,10 +67,19 @@ public class NumberDeviceParm
     if ( value == null )
       tf.setText( "" );
     else
-      tf.setText( value.toString());
+    {
+      String temp = null;
+      if ( base == 10 )
+        temp = value.toString();
+      else
+        temp = Integer.toHexString((( Integer )value ).intValue());
+      tf.setText( temp );
+    }
   }
 
   private JTextField tf = null;
   private int min;
   private int max;
+  private int base = 10;
+  private IntVerifier verifier = null;
 }
